--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+
+
+.main-content {margin: 82px auto 32px;padding: 0 16px;max-width: 960px;align-items: center;}
