--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
 <div class="clearfix"><div class="clearfix mt-4"></div></div>
 <div class="clearfix"><div class="clearfix pt-5"></div></div>
 <div class="container">
-    <app-property-card></app-property-card>
     <app-property-list></app-property-list>
 </div>
+<app-footer></app-footer>
