--- a/src/app/property/property-list/property-list.component.html
+++ b/src/app/property/property-list/property-list.component.html
@@ -1,1 +1,5 @@
-<p>property-list works!</p>
+<div class="row">
+    <div class="col-sm-3" *ngFor="let property of properties">
+        <app-property-card [property]="property"></app-property-card>
+    </div>
+</div>
